clean up and readme changes

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "should": "~3.3.1",
     "md5-o-matic": "~0.1.0"
   },
-  "readme": "# hash-o-matic\nHash up an unlimited number of values, but the problem is that the final hashed value is dependent on the order in which these values are added. What hash-o-matic does is it will order the parameters by the parameter's name before hashing. This is useful if you frequently hash the same variables through-out your app(s) but can't recall the order in which the values were added. The only real catch is the variables must have the same naming throughout your code.\n",
+  "readme": "# hash-o-matic\nHash up an unlimited number of values, but the problem is that the final hashed value is dependent on the order in which these values are added. What hash-o-matic does is it will order the object's properties by the property name before hashing. This is useful if you frequently hash the same variables through-out your app(s) but can't recall the order in which the values were added. The only real catch is the variables must have the same naming throughout your code.\n",
   "bugs": {
     "url": "https://github.com/trentmillar/hash-o-matic/issues"
   },
